--- a/css/style.css
+++ b/css/style.css
@@ -636,8 +636,8 @@
     justify-content: center;
     align-items: center;
     font-size: 18px;
+    width: 100vw;
     height: 50px;
-    width: 100%;
     background: #f1f1f1;
     font-weight: 500;
     color: #544837;
@@ -954,6 +954,7 @@
     }
 
     .devs {
+        width: 90vw;
         height: 60px;
         font-size: 14px;
     }
