--- a/css/style.css
+++ b/css/style.css
@@ -26,8 +26,8 @@
     border-radius: 200em/20em;
     z-index: -5;
     top: 3350px;
-
 }
+
 
 .container {
     margin: auto;
@@ -335,13 +335,6 @@
 }
 
 /*------------------------------------*/
-
-.main-container-balloon::before,
-.main-container-balloon::before {
-    content: "";
-    display: table;
-    clear: both;
-}
 
 .main-container-balloon {
     justify-content: center;
@@ -710,6 +703,10 @@
         font-size: 16px;
     }
 
+    .background-icon::after {
+        top: 3200px;
+    }
+
 }
 
 @media only screen and (max-width: 950px) {
@@ -786,15 +783,22 @@
 
 @media only screen and (max-width: 414px) {
 
+    .container {
+        background: pink;
+        margin: 0;
+        width: 100vw;
+        padding: 10px;
+
+    }
+
     .paragraph {
-        width: 100%;
+        width: 90%;
     }
 
     .subtitle {
         width: 100%;
         font-size: 32px;
         line-height: 40px;
-        margin:
     }
 
     .subtitle-second {
@@ -808,7 +812,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        margin-top: 20px;
+        margin-top: 0px;
         height: 260px;
     }
 
@@ -820,8 +824,8 @@
 
     .container-nav {
         flex-direction: row-reverse;
-        width: 240px;
-        margin: 20px 0;
+        width: 220px;
+        margin: 0;
     }
 
     .container-list {
@@ -971,6 +975,7 @@
     }
 
     .devs {
+        width: 100%;
         height: 60px;
         font-size: 14px;
     }
